package umu.tds.model;

public interface EstrategiaDescuento {

	double calcularDescuento(Usuario usuario);

}
